@@ -1,6 +1,5 @@
 # -*- shell-script -*-
 HAVE_OPENSSL='@HAVE_OPENSSL@'
-OPENSSL_SUPPORTS_SNI='@OPENSSL_SUPPORTS_SNI@'
 HAVE_UNBOUND='@HAVE_UNBOUND@'
 HAVE_BACKTRACE='@HAVE_BACKTRACE@'
 HAVE_UNWIND='@HAVE_UNWIND@'
